Login y Registro funcionales, no se ve bien la pagina principal

--- a/ProyectoFinal/ProyectoFinal/ProyectoFinal.csproj
+++ b/ProyectoFinal/ProyectoFinal/ProyectoFinal.csproj
@@ -20,9 +20,11 @@
   <ItemGroup>
     <None Remove="Views\" />
     <None Remove="Model\" />
+    <None Remove="Utils\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\" />
     <Folder Include="Model\" />
+    <Folder Include="Utils\" />
   </ItemGroup>
 </Project>
