Funcional proyeto final

--- a/ProyectoFinal/ProyectoFinal.Android/ProyectoFinal.Android.csproj
+++ b/ProyectoFinal/ProyectoFinal.Android/ProyectoFinal.Android.csproj
@@ -192,6 +192,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\user.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\herraflotantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\inicio.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
