--- a/ProyectoFinal/ProyectoFinal/ProyectoFinal.csproj
+++ b/ProyectoFinal/ProyectoFinal/ProyectoFinal.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2191" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="FireSharp" Version="2.0.4" />
     <PackageReference Include="System.Text.Json" Version="7.0.3" />
@@ -27,6 +27,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="Views\CollectionsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Home2.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Home3.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\Shopping.xaml">
